--- a/_modules/scripts/engine/internal/effect.html
+++ b/_modules/scripts/engine/internal/effect.html
@@ -279,6 +279,7 @@
     <span class="n">DamageTypeType</span><span class="p">,</span>
     <span class="n">Direction</span><span class="p">,</span>
     <span class="n">DirectionType</span><span class="p">,</span>
+    <span class="n">EventType</span><span class="p">,</span>
     <span class="n">InteractionEvent</span><span class="p">,</span>
     <span class="n">PrimaryStatType</span><span class="p">,</span>
     <span class="n">TargetTag</span><span class="p">,</span>
@@ -359,12 +360,11 @@
             <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Damage given to DamageEffect is </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">damage</span><span class="si">}</span><span class="s2"> and was therefore not executed."</span><span class="p">)</span>
             <span class="k">return</span> <span class="kc">False</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">failure_effects</span>
 
-        <span class="k">if</span> <span class="ow">not</span> <span class="n">world</span><span class="o">.</span><span class="n">entity_has_component</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="n">HasCombatStats</span><span class="p">)</span> <span class="ow">or</span> <span class="ow">not</span> <span class="n">world</span><span class="o">.</span><span class="n">entity_has_component</span><span class="p">(</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">HasCombatStats</span>
-        <span class="p">):</span>
-            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Either caster or target doesnt have combat stats so damage cannot be applied."</span><span class="p">)</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">world</span><span class="o">.</span><span class="n">entity_has_component</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">Resources</span><span class="p">):</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Target doesnt have resources so damage cannot be applied."</span><span class="p">)</span>
             <span class="k">return</span> <span class="kc">False</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">failure_effects</span>
 
+        <span class="c1"># get combat stats</span>
         <span class="n">defenders_stats</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">create_combat_stats</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">)</span>
         <span class="n">attackers_stats</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">create_combat_stats</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">)</span>
 
@@ -384,7 +384,8 @@
 
             <span class="c1"># post interaction event</span>
             <span class="n">event</span> <span class="o">=</span> <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">Event</span><span class="p">(</span>
-                <span class="n">InteractionEvent</span><span class="o">.</span><span class="n">DAMAGE</span><span class="p">,</span>
+                <span class="n">EventType</span><span class="o">.</span><span class="n">INTERACTION</span><span class="p">,</span>
+                <span class="n">subtype</span><span class="o">=</span><span class="n">InteractionEvent</span><span class="o">.</span><span class="n">DAMAGE</span><span class="p">,</span>
                 <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span>
                 <span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span>
                 <span class="n">amount</span><span class="o">=</span><span class="n">damage</span><span class="p">,</span>
@@ -449,7 +450,8 @@
 
                     <span class="c1"># post interaction event</span>
                     <span class="n">event</span> <span class="o">=</span> <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">Event</span><span class="p">(</span>
-                        <span class="n">InteractionEvent</span><span class="o">.</span><span class="n">MOVE</span><span class="p">,</span>
+                        <span class="n">EventType</span><span class="o">.</span><span class="n">INTERACTION</span><span class="p">,</span>
+                        <span class="n">subtype</span><span class="o">=</span><span class="n">InteractionEvent</span><span class="o">.</span><span class="n">MOVE</span><span class="p">,</span>
                         <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span>
                         <span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span>
                         <span class="n">direction</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">direction</span><span class="p">,</span>
@@ -548,7 +550,8 @@
 
             <span class="c1"># post interaction event</span>
             <span class="n">event</span> <span class="o">=</span> <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">Event</span><span class="p">(</span>
-                <span class="n">InteractionEvent</span><span class="o">.</span><span class="n">AFFECT_STAT</span><span class="p">,</span>
+                <span class="n">EventType</span><span class="o">.</span><span class="n">INTERACTION</span><span class="p">,</span>
+                <span class="n">subtype</span><span class="o">=</span><span class="n">InteractionEvent</span><span class="o">.</span><span class="n">AFFECT_STAT</span><span class="p">,</span>
                 <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span>
                 <span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span>
                 <span class="n">stat</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">stat_to_target</span><span class="p">,</span>
@@ -595,7 +598,11 @@
 
             <span class="c1"># post interaction event</span>
             <span class="n">event</span> <span class="o">=</span> <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">Event</span><span class="p">(</span>
-                <span class="n">InteractionEvent</span><span class="o">.</span><span class="n">AFFLICTION</span><span class="p">,</span> <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">affliction_name</span>
+                <span class="n">EventType</span><span class="o">.</span><span class="n">INTERACTION</span><span class="p">,</span>
+                <span class="n">subtype</span><span class="o">=</span><span class="n">InteractionEvent</span><span class="o">.</span><span class="n">AFFLICTION</span><span class="p">,</span>
+                <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span>
+                <span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span>
+                <span class="n">name</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">affliction_name</span><span class="p">,</span>
             <span class="p">)</span>
             <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="n">event</span><span class="p">)</span>
 
@@ -634,7 +641,11 @@
 
             <span class="c1"># post interaction event</span>
             <span class="n">event</span> <span class="o">=</span> <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">Event</span><span class="p">(</span>
-                <span class="n">InteractionEvent</span><span class="o">.</span><span class="n">AFFECT_COOLDOWN</span><span class="p">,</span> <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">amount</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">affect_amount</span>
+                <span class="n">EventType</span><span class="o">.</span><span class="n">INTERACTION</span><span class="p">,</span>
+                <span class="n">subtype</span><span class="o">=</span><span class="n">InteractionEvent</span><span class="o">.</span><span class="n">AFFECT_COOLDOWN</span><span class="p">,</span>
+                <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span>
+                <span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span>
+                <span class="n">amount</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">affect_amount</span><span class="p">,</span>
             <span class="p">)</span>
             <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="n">event</span><span class="p">)</span>
 
