--- a/_modules/scripts/nqp/main.html
+++ b/_modules/scripts/nqp/main.html
@@ -261,18 +261,19 @@
 
 <span class="kn">import</span> <span class="nn">pygame</span>
 <span class="kn">import</span> <span class="nn">snecs</span>
+<span class="kn">from</span> <span class="nn">pygame.constants</span> <span class="kn">import</span> <span class="n">USEREVENT</span>
 <span class="kn">from</span> <span class="nn">snecs.world</span> <span class="kn">import</span> <span class="n">default_world</span>
 
 <span class="kn">import</span> <span class="nn">scripts.nqp.processors.input</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">chronicle</span><span class="p">,</span> <span class="n">state</span><span class="p">,</span> <span class="n">world</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">chronicle</span><span class="p">,</span> <span class="n">state</span><span class="p">,</span> <span class="n">system</span><span class="p">,</span> <span class="n">world</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core.ui</span> <span class="kn">import</span> <span class="n">ui</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">debug</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.component</span> <span class="kn">import</span> <span class="n">NQPComponent</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">GameState</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">EventType</span><span class="p">,</span> <span class="n">GameEvent</span><span class="p">,</span> <span class="n">GameState</span><span class="p">,</span> <span class="n">InputEvent</span><span class="p">,</span> <span class="n">InteractionEvent</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.debug</span> <span class="kn">import</span> <span class="n">enable_profiling</span><span class="p">,</span> <span class="n">initialise_logging</span><span class="p">,</span> <span class="n">kill_logging</span>
 <span class="kn">from</span> <span class="nn">scripts.nqp</span> <span class="kn">import</span> <span class="n">processors</span>
 <span class="kn">from</span> <span class="nn">scripts.nqp.command</span> <span class="kn">import</span> <span class="n">initialise_game</span>
-<span class="kn">from</span> <span class="nn">scripts.nqp.processors</span> <span class="kn">import</span> <span class="n">display</span><span class="p">,</span> <span class="n">game</span><span class="p">,</span> <span class="n">interaction</span>
+<span class="kn">from</span> <span class="nn">scripts.nqp.processors</span> <span class="kn">import</span> <span class="n">display</span><span class="p">,</span> <span class="n">game</span>
 
 
 <div class="viewcode-block" id="main"><a class="viewcode-back" href="../../../scripts.nqp.html#scripts.nqp.main.main">[docs]</a><span class="k">def</span> <span class="nf">main</span><span class="p">():</span>
@@ -332,6 +333,7 @@
         <span class="c1"># get info to support UI updates and handling events</span>
         <span class="n">current_state</span> <span class="o">=</span> <span class="n">state</span><span class="o">.</span><span class="n">get_current</span><span class="p">()</span>
         <span class="n">turn_holder</span> <span class="o">=</span> <span class="n">chronicle</span><span class="o">.</span><span class="n">get_turn_holder</span><span class="p">()</span>
+        <span class="n">player</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_player</span><span class="p">()</span>
 
         <span class="c1"># process any deletions from last frame</span>
         <span class="c1"># this copies snecs.process_pending_deletions() but adds extra steps.</span>
@@ -343,7 +345,7 @@
             <span class="n">snecs</span><span class="o">.</span><span class="n">delete_entity_immediately</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">default_world</span><span class="p">)</span>
 
         <span class="c1"># have enemy take turn</span>
-        <span class="k">if</span> <span class="n">current_state</span> <span class="o">==</span> <span class="n">GameState</span><span class="o">.</span><span class="n">GAMEMAP</span> <span class="ow">and</span> <span class="n">turn_holder</span> <span class="o">!=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_player</span><span class="p">():</span>
+        <span class="k">if</span> <span class="n">current_state</span> <span class="o">==</span> <span class="n">GameState</span><span class="o">.</span><span class="n">GAME_MAP</span> <span class="ow">and</span> <span class="n">turn_holder</span> <span class="o">!=</span> <span class="n">player</span><span class="p">:</span>
             <span class="c1"># just in case the turn holder has died but not been replaced as expected</span>
             <span class="k">try</span><span class="p">:</span>
                 <span class="n">world</span><span class="o">.</span><span class="n">take_turn</span><span class="p">(</span><span class="n">turn_holder</span><span class="p">)</span>
@@ -352,13 +354,21 @@
 
         <span class="c1"># update based on input events</span>
         <span class="k">for</span> <span class="n">event</span> <span class="ow">in</span> <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">get</span><span class="p">():</span>
-            <span class="n">processors</span><span class="o">.</span><span class="n">input</span><span class="o">.</span><span class="n">process_event</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">current_state</span><span class="p">)</span>
-            <span class="n">processors</span><span class="o">.</span><span class="n">game</span><span class="o">.</span><span class="n">process_event</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">current_state</span><span class="p">)</span>
-            <span class="n">processors</span><span class="o">.</span><span class="n">interaction</span><span class="o">.</span><span class="n">process_event</span><span class="p">(</span><span class="n">event</span><span class="p">)</span>  <span class="c1"># only happens in gamemap so doesnt need state</span>
-            <span class="n">ui</span><span class="o">.</span><span class="n">process_ui_events</span><span class="p">(</span><span class="n">event</span><span class="p">)</span>
+            <span class="c1"># InputEvent doesnt cover key presses so filter out what we dont want instead</span>
+            <span class="k">if</span> <span class="n">event</span><span class="o">.</span><span class="n">type</span> <span class="ow">in</span> <span class="p">(</span><span class="n">EventType</span><span class="o">.</span><span class="n">INPUT</span><span class="p">,</span> <span class="n">pygame</span><span class="o">.</span><span class="n">KEYDOWN</span><span class="p">):</span>
+                <span class="n">processors</span><span class="o">.</span><span class="n">input</span><span class="o">.</span><span class="n">process_input_event</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">current_state</span><span class="p">)</span>
+
+            <span class="k">if</span> <span class="n">event</span><span class="o">.</span><span class="n">type</span> <span class="o">==</span> <span class="n">EventType</span><span class="o">.</span><span class="n">GAME</span><span class="p">:</span>
+                <span class="n">processors</span><span class="o">.</span><span class="n">game</span><span class="o">.</span><span class="n">process_game_event</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">current_state</span><span class="p">)</span>
+
+            <span class="k">if</span> <span class="n">event</span><span class="o">.</span><span class="n">type</span> <span class="o">==</span> <span class="n">EventType</span><span class="o">.</span><span class="n">INTERACTION</span><span class="p">:</span>
+                <span class="n">system</span><span class="o">.</span><span class="n">process_interaction_event</span><span class="p">(</span><span class="n">event</span><span class="p">)</span>  <span class="c1"># only happens in gamemap so doesnt need state</span>
+
+            <span class="k">if</span> <span class="n">event</span><span class="o">.</span><span class="n">type</span> <span class="ow">not</span> <span class="ow">in</span> <span class="p">(</span><span class="n">EventType</span><span class="o">.</span><span class="n">INTERACTION</span><span class="p">,</span> <span class="n">EventType</span><span class="o">.</span><span class="n">GAME</span><span class="p">):</span>
+                <span class="n">ui</span><span class="o">.</span><span class="n">process_ui_events</span><span class="p">(</span><span class="n">event</span><span class="p">)</span>
 
         <span class="c1"># allow everything to update in response to new state</span>
-        <span class="n">display</span><span class="o">.</span><span class="n">process_display_updates</span><span class="p">(</span><span class="n">time_delta</span><span class="p">,</span> <span class="n">current_state</span><span class="p">)</span>
+        <span class="n">display</span><span class="o">.</span><span class="n">process_updates</span><span class="p">(</span><span class="n">time_delta</span><span class="p">,</span> <span class="n">current_state</span><span class="p">)</span>
         <span class="n">debug</span><span class="o">.</span><span class="n">update</span><span class="p">()</span>
         <span class="n">ui</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">time_delta</span><span class="p">)</span>
 
