--- a/_modules/scripts/nqp/ui_elements/character_selector.html
+++ b/_modules/scripts/nqp/ui_elements/character_selector.html
@@ -266,7 +266,7 @@
 
 <span class="kn">from</span> <span class="nn">scripts.engine.core.utility</span> <span class="kn">import</span> <span class="n">build_sprites_from_paths</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">library</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">GameEvent</span><span class="p">,</span> <span class="n">GAP_SIZE</span><span class="p">,</span> <span class="n">Height</span><span class="p">,</span> <span class="n">RenderLayer</span><span class="p">,</span> <span class="n">TILE_SIZE</span><span class="p">,</span> <span class="n">TraitGroup</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">EventType</span><span class="p">,</span> <span class="n">GameEvent</span><span class="p">,</span> <span class="n">GAP_SIZE</span><span class="p">,</span> <span class="n">Height</span><span class="p">,</span> <span class="n">RenderLayer</span><span class="p">,</span> <span class="n">TILE_SIZE</span><span class="p">,</span> <span class="n">TraitGroup</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.definition</span> <span class="kn">import</span> <span class="n">ActorData</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.widgets.panel</span> <span class="kn">import</span> <span class="n">Panel</span>
 
@@ -516,7 +516,7 @@
         <span class="p">)</span>
 
         <span class="c1"># fire event</span>
-        <span class="n">new_event</span> <span class="o">=</span> <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">Event</span><span class="p">(</span><span class="n">GameEvent</span><span class="o">.</span><span class="n">START_GAME</span><span class="p">,</span> <span class="n">player_data</span><span class="o">=</span><span class="n">player_data</span><span class="p">)</span>
+        <span class="n">new_event</span> <span class="o">=</span> <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">Event</span><span class="p">(</span><span class="n">EventType</span><span class="o">.</span><span class="n">GAME</span><span class="p">,</span> <span class="n">subtype</span><span class="o">=</span><span class="n">GameEvent</span><span class="o">.</span><span class="n">START_GAME</span><span class="p">,</span> <span class="n">player_data</span><span class="o">=</span><span class="n">player_data</span><span class="p">)</span>
         <span class="n">pygame</span><span class="o">.</span><span class="n">event</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="n">new_event</span><span class="p">)</span></div>
 </pre></div>
 
